# traveller

./: .gitignore  .mcp.json  .prettierignore  CLAUDE.md  TODO.md  base.gpx  classes.py  flake.nix  init.py  pyproject.toml  serve.py  utils.py
templates/: base.html.j2  base.j2.html  edit_row.html.j2  edit_row.j2.html  row.html.j2  row.j2.html  table.html.j2  table.j2.html  types.j2.html
tests/: conftest.py  test_apis.py  test_e2e.py  test_migrate.py  test_models.py  test_storage.py  test_types.py  test_views.py
traveller/: __main__.py  app.py  classes.py  gpx.py  init.py  migrate.py  models.py  storage.py  utils.py
traveller/blueprints/: apis.py  views.py
traveller/static/css/: styles.css
traveller/static/js/: index.js  main.js
traveller/templates/: base.j2.html  card.j2.html  edit_row.j2.html  guide_edit_name.j2.html  guide_row.j2.html  index.j2.html  mobile_edit.j2.html  row.j2.html  table.j2.html  type_list.j2.html  type_merge_confirm.j2.html  types.j2.html
