[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "traveller"
version = "0.1.0"
description = "Travel planning Flask web app"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "flask",
    "gunicorn",
    "gpxpy",
]

[project.optional-dependencies]
dev = [
    "python-lsp-server",
    "jupyterlab",
    "watchdog",
]

[project.scripts]
traveller = "traveller.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["traveller"]
