[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "traveller"
version = "0.1.0"
description = "Travel planning Flask web app"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "flask",
    "gunicorn",
    "gpxpy",
]

[project.optional-dependencies]
dev = [
    "python-lsp-server",
    "jupyterlab",
    "watchdog",
    "pytest",
    "pytest-playwright",
]
test = [
    "pytest",
    "pytest-playwright",
]

[project.scripts]
traveller = "traveller.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["traveller"]

[tool.djlint]
profile = "jinja"
# H030/H031: SEO meta tags (irrelevant for a VPN-only app).
# J018: false-positive on the nmap:// deep link.
# T028: stylistic preference for spaceless tags inside attribute values.
ignore = "H030,H031,J018,T028"

[tool.pytest.ini_options]
testpaths = ["tests"]
